--- a/Dyplom/Dyplom.tex
+++ b/Dyplom/Dyplom.tex
@@ -995,7 +995,7 @@ Specjalność: & {\bfseries \@specjalnosc}\\
 \include{rozdzial04}
 \appendix
 \include{dodatekA}
-\include{dodatekB}
+%\include{dodatekB}
 \include{dodatekC}
 % LITERATURA (zostanie wygenerowana automatycznie)
 %UWAGA: bibliotekę referencji należy przygotować samemu. Dobrym do tego narzędziem jest JabRef.
