--- a/Dyplom/rozdzial04.tex
+++ b/Dyplom/rozdzial04.tex
@@ -1,8 +1,8 @@
 \chapter{Podsumowanie pracy}
 
-W niniejszej pracy opisano proces projektowania i implementacji systemu „Harmony Home Net” – aplikacji typu eBOK adresowanej do wspólnot mieszkaniowych. Głównym celem projektu było stworzenie rozwiązania informatycznego wspierającego zarządzanie wspólnotami, komunikację pomiędzy mieszkańcami a administracją oraz automatyzację kluczowych procesów związanych z obsługą nieruchomości. \\[-10pt]
+Głównym celem pracy było zaprojektowanie i wdrożenie aplikacji internetowej typu eBOK dla wspólnoty mieszkaniowej. Cel ten udało się osiągnąć. Zaprojektowany i zaimplementowany system „Harmony Home Net” jest narzędziem, które może wspierać proces zarządzania wspólnotą, wspomagać komunikację pomiędzy mieszkańcami a administracją, automatyzować kluczowe zadania związane z obsługą nieruchomości. \\[-10pt]
 
-\noindent\textbf{Zakres i wynik projektu}\newline
+\noindent\textbf{Wyniki pracy}\newline
 \noindent W pracy przedstawiono pełny cykl życia oprogramowania, począwszy od analizy wymagań funkcjonalnych i niefunkcjonalnych, poprzez projektowanie architektury, aż po implementację i testy prototypu. System został zaprojektowany w oparciu o nowoczesne technologie, takie jak:
 \begin{itemize}
     \item \textbf{Backend:} Spring Boot -- zapewniający elastyczność, bezpieczeństwo i wydajność aplikacji,
@@ -10,8 +10,7 @@ W niniejszej pracy opisano proces projektowania i implementacji systemu „Harmo
     \item \textbf{Baza danych:} PostgreSQL -- gwarantująca integralność i spójność danych,
     \item \textbf{Konteneryzacja:} Docker -- wspierający skalowalność i łatwość wdrażania systemu.
 \end{itemize}
-
-Stworzony system oferuje szereg funkcji dostosowanych do potrzeb mieszkańców, administracji i administratorów:
+System oferuje funkcje dostosowane do potrzeb mieszkańców, administracji i administratorów:
 \begin{itemize}
     \item \textbf{Zarządzanie użytkownikami} -- Kompleksowy system ról i poziomów dostępu,
     \item \textbf{Obsługa płatności} -- Możliwość przeglądania należności, realizacji płatności online oraz harmonogramowania przypomnień,
@@ -27,7 +26,7 @@ Stworzony system stanowi solidną bazę do rozwoju nowoczesnych aplikacji wspier
     \item pełna integracja z zewnętrznymi systemami, np. bankowości czy urządzeń pomiarowych,
     \item rozbudowa funkcji analitycznych, takich jak generowanie zaawansowanych raportów,
     \item wdrożenie bardziej zaawansowanego interfejsu użytkownika dla mieszkańców,
-    \item zwiększenie automatyzacji procesów poprzez implementację zaawansowanych mechanizmów opartych na diagramach BPMN.
+    \item zwiększenie automatyzacji procesów poprzez implementację zaawansowanych mechanizmów ich definiowania i monitorowania. % TO DO: ja wspomniałem o BPMN w kontekście metod modelowania procesów oraz ich wdrażania z wykorzystaniem silników przetwarzających opisy wykonane w tym języku. Pana wtrącenie o BPMN usunąłem, bo nic ono nie wnosiło, nie miało też zbytniego sensu (było wyrwane z kontekstu).
 \end{itemize}
 
 
