--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -25,7 +25,7 @@
   \item [MFA] (ang.\ \emph{Multi-Factor Authentication})
   \item [ACL] (ang.\ \emph{Access-Control List})
   \item [DMS] (ang.\ \emph{Document management system})
-  \item [BPMN] (ang.\ \emph{Business Process Model and Notation})
+%  \item [BPMN] (ang.\ \emph{Business Process Model and Notation})
   \item [AJAX] (ang.\ \emph{ang. Asynchronous JavaScript and XML})
   \item [XML] (ang.\ \emph{ang. Extensible Markup Language})
 \end{description}
