--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -47,18 +47,15 @@ Aplikacja będzie dostępna w przeglądarce internetowej i zoptymalizowana pod k
 Frontend aplikacji zostanie zaprojektowany w języku TypeScript z wykorzystaniem frameworka Next.js, co pozwoli na stworzenie nowoczesnego, responsywnego interfejsu użytkownika, zapewniającego intuicyjną obsługę oraz szybkie działanie systemu.
 
 \section{Układ pracy}
-Praca składa się z czterech rozdziałów oraz dwóch dodatków, w których kompleksowo opisano proces projektowania, implementacji 
-oraz potencjalnego wdrożenia i uruchomienia systemu „Harmony Home Net”. Ich zawartość przedstawia się następująco.
+Praca składa się z czterech rozdziałów oraz dwóch dodatków, w których kompleksowo opisano proces projektowania, implementacji oraz potencjalnego wdrożenia i uruchomienia systemu „Harmony Home Net”. Ich zawartość przedstawia się następująco.
 \begin{itemize}
-    \item \textbf{Rozdział 1: Wstęp} -- Rozdział zawiera wprowadzenie w tematykę pracy, z zaznaczenie roli elektronicznych biur obsługi klienta (eBOK) w sektorach takich jak zarządzanie nieruchomościami. W rozdziale tym przedstawiono cel pracy, uzasadnienie wyboru tematu oraz planowany jej zakres.
+    \item \textbf{Rozdział 1: Wstęp} -- Rozdział zawiera wprowadzenie w tematykę pracy, z zaznaczeniem roli elektronicznych biur obsługi klienta (eBOK) w sektorach takich jak zarządzanie nieruchomościami. W rozdziale tym przedstawiono cel pracy, uzasadnienie wyboru tematu oraz planowany jej zakres.
     \item \textbf{Rozdział 2: Analiza wymagań} -- W rozdziale zamieszczono szczegółowy opis wymagań funkcjonalnych i niefunkcjonalnych systemu. Przedstawiono też potencjalne przykłady użycia, jak również zidentyfikowano główne komponenty systemu oraz opisano ich wzajemne zależności. Wykonana analiza wymagań dała podstawę do zaprojektowania systemu.
-
     \item \textbf{Rozdział 3: Implementacja} -- To kluczowy rozdział pracy. Opisano w nim proces budowy aplikacji. Omówiono zastosowaną architekturę warstwową, szczegóły projektowania bazy danych oraz implementację głównych modułów, takich jak zarządzanie użytkownikami, płatnościami, głosowaniami i powiadomieniami. Rozdział ten zawiera także opis wykorzystania technologii AJAX w warstwie frontendowej, umożliwiającej płynną i asynchroniczną komunikację z serwerem.
-
-    \item \textbf{Rozdział 4: Podsumowanie pracy} -- W rozdziale tym podsumowano rezultaty pracy, wskazując na osiągnięcia oraz trudności napotkane podczas implementacji. Omówiono wnioski płynące z realizacji projektu oraz zasugerowano możliwe kierunki dalszego rozwoju systemu.
-
+    \item \textbf{Rozdział 4: Podsumowanie pracy} -- W rozdziale tym podsumowano rezultaty pracy, wskazując na osiągnięcia oraz sugerując możliwe kierunki dalszego rozwoju systemu.
     \item \textbf{Dodatek A: Instrukcja wdrożeniowa} -- W tym dodatku zamieszczono instrukcję, w jaki sposób wdrożyć aplikację internetową by mogła być używana przez szersze grono odbiorców.
-		\item \textbf{Dodatek B: Krótki start} -- Ten dodatek poświecono na opis realizacji prostego przypadku użycia systemu.	
+    \item \textbf{Dodatek B: Krótki start} -- Ten dodatek poświęcono na opis realizacji prostego przypadku użycia systemu.
 \end{itemize}
+
 
 
