--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -139,7 +139,7 @@ abstract = "Automatic error-correction m natural language processing is based on
 }
 
 @misc{Play24,
-		author = {P4 Sp. z o.o.},
+		author = {{P4 Sp.\ z o.o.}},
     title = {{Aplikacja Play24. Strona główna}},
     note = {\url{https://www.play.pl/play24} [dostęp dnia 26 września 2024]},
     year = {2024}
@@ -160,14 +160,14 @@ abstract = "Automatic error-correction m natural language processing is based on
 
 
 @misc{e-kartoteka,
-    author = {E-Kartoteka},
+    author = {{E-Kartoteka}},
     title = {{E-Kartoteka. Strona Główna}},
     note = {\url{https://e-kartoteka.pl/#/login} [dostęp dnia 21 września 2024]},
     year = {2024}
 }
 
 @misc{e-kartoteka_manual,
-    author = {E-Kartoteka},
+    author = {{E-Kartoteka}},
     title = {{E-Kartoteka. Instrukcja obsługi aplikacji mobilnej}},
     note = {\url{https://www.e-kartoteka.pl/assets/image/aplikacja/instrukcja.pdf} [dostęp dnia 22 września 2024]},
     year = {2024}
@@ -188,7 +188,7 @@ abstract = "Automatic error-correction m natural language processing is based on
 }
 
 @misc{vsupalov,
-    author = {vsupalov},
+    author = {Vladislav Supalov},
     title = {{Should You Run Your Database in Docker?}},
     note = {\url{https://vsupalov.com/database-in-docker/} [dostęp dnia 25 lipca 2024]},
     year = {2024}
@@ -251,14 +251,14 @@ abstract = "Automatic error-correction m natural language processing is based on
 }
 
 @misc{szyrowanie_danych,
-    author = {Łukasz Michałek},
+    author = {{\L{}.\ Micha\l{}ek}},
     title = {{Czym jest szyfrowanie danych i dlaczego jest tak ważne?}},
     note = {\url{https://koszarytradingu.com/pl/czym-jest-szyfrowanie-danych/} [dostęp dnia 23 listopada 2024]},
     year = {2023}
 }
 
 @misc{acl_2,
-    author = {TECHWATCH.DE},
+    author = {Marco},
     title = {{Zrozumienie list kontroli dostępu (ACL) – obszerny przewodnik dla entuzjastów technologii}},
     note = {\url{https://techwatch.de/pl/blog/Zrozumienie-list-kontroli-dost%C4%99pu-to-kompleksowy-przewodnik-dla-entuzjast%C3%B3w-technologii/} [dostęp dnia 23 listopada 2024]},
     year = {2023}
@@ -280,7 +280,7 @@ abstract = "Automatic error-correction m natural language processing is based on
 
 
 @misc{rodo_dokumenty,
-    author = {QMStorm},
+    author = {{QMStorm}},
     title = {{Czy zgodnie z RODO szyfrowanie danych jest obowiązkowe?}},
     note = {\url{https://poradnikprzedsiebiorcy.pl/-czy-zgodnie-z-rodo-szyfrowanie-danych-jest-obowiazkowe} [dostęp dnia 23 listopada 2024]},
     year = {2023}
@@ -288,14 +288,14 @@ abstract = "Automatic error-correction m natural language processing is based on
 
 
 @misc{django_guardian,
-    author = {Poradnik przedsiębiorcy},
+    author = {{Django Software Foundation}},
     title = {{Customizing authentication in Django}},
     note = {\url{https://docs.djangoproject.com/en/5.1/topics/auth/customizing/#handling-object-permissions} [dostęp dnia 23 listopada 2024]},
     year = {2024}
 }
 
 @misc{workflow_utomation,
-    author = {DocWay},
+    author = {Adam Chodkowski},
     title = {{Elektroniczny obieg dokumentów i workflow – wszystko co musisz wiedzieć}},
     note = {\url{https://docway.pl/blog/elektroniczny-obieg-dokumentow/} [dostęp dnia 23 listopada 2024]},
     year = {2022}
@@ -316,14 +316,14 @@ abstract = "Automatic error-correction m natural language processing is based on
 }
 
 @misc{BPMN_spec,
-    author = {omg.org},
+    author = {{Object Management Group}},
     title = {{About the Business Process Model And Notation Specification Version 2.0}},
     note = {\url{https://www.omg.org/spec/BPMN/2.0/} [dostęp dnia 24 listopada 2024]},
     year = {2010}
 }
 
 @misc{paypal_api,
-    author = {PayPal Developer},
+    author = {{PayPal Developer}},
     title = {{Get started with PayPal REST APIs}},
     note = {\url{https://developer.paypal.com/api/rest/} [dostęp dnia 24 listopada 2024]},
     year = {2023}
@@ -358,7 +358,7 @@ abstract = "Automatic error-correction m natural language processing is based on
 }
 
 @misc{hashicorp_vault,
-    author = {HashiCorp},
+    author = {{HashiCorp}},
     title = {{Secure applications identities and protect sensitive data}},
     note = {\url{https://www.hashicorp.com/products/vault} [dostęp dnia 24 listopada 2024]},
     year = {2024}
@@ -378,7 +378,7 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
-@booklet{Marcin,
+@misc{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
 author = {Moś, M.},
 note = {\url{http://procesy.ue.wroc.pl/uploads/Marcin/BPMN.pdf} [dostęp dnia 20 czerwca 2015]}
